--- a/about.html
+++ b/about.html
@@ -19,45 +19,381 @@
         }
 
         /* Navigation */
-        nav {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 20px 50px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: rgba(10, 10, 10, 0.95);
-            backdrop-filter: blur(10px);
-            z-index: 1000;
-            border-bottom: 1px solid rgba(139, 92, 246, 0.1);
-        }
+      /* Navigation */
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding:5px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(10, 10, 10, 0.95);
+    backdrop-filter: blur(10px);
+    z-index: 1000;
+    border-bottom: 1px solid rgba(139, 92, 246, 0.1);
+    transition: padding 0.3s;
+}
 
-        .logo {
-            font-size: 28px;
-            font-weight: bold;
-            background: linear-gradient(135deg, #8b5cf6, #06b6d4);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
 
-        .nav-links {
-            display: flex;
-            gap: 40px;
-            list-style: none;
-        }
 
-        .nav-links a {
-            color: #e5e5e5;
-            text-decoration: none;
-            font-size: 16px;
-            transition: color 0.3s;
-        }
+/* Navigation Brand (Logo + Text) */
+.nav-brand {
+    display: flex;
+    align-items: center;
 
-        .nav-links a:hover {
-            color: #8b5cf6;
-        }
+    z-index: 1001;
+}
+
+.nav-logo {
+    width: 70px;
+    height: 90px;
+    object-fit: contain;
+    transition: transform 0.3s ease;
+    filter: drop-shadow(0 0 15px rgba(139, 92, 246, 0.4));
+}
+
+
+
+.logo {
+    font-size: 28px;
+    font-weight: bold;
+    background: linear-gradient(135deg, #8b5cf6, #06b6d4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+
+/* Navigation Links */
+.nav-links {
+    display: flex;
+    gap: 40px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.nav-links a {
+    color: #e5e5e5;
+    text-decoration: none;
+    font-size: 16px;
+    transition: color 0.3s;
+    position: relative;
+}
+
+.nav-links a::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background: linear-gradient(135deg, #8b5cf6, #06b6d4);
+    transition: width 0.3s;
+}
+
+.nav-links a:hover::after {
+    width: 100%;
+}
+
+.nav-links a:hover {
+    color: #8b5cf6;
+}
+
+/* Hamburger Menu */
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    z-index: 1001;
+    padding: 5px;
+}
+
+.menu-toggle .bar {
+    width: 28px;
+    height: 3px;
+    background: linear-gradient(135deg, #8b5cf6, #06b6d4);
+    margin: 4px 0;
+    transition: all 0.3s ease;
+    border-radius: 3px;
+}
+
+/* Mobile Responsive */
+@media (max-width: 768px) {
+    nav {
+        padding: 6px 0px;
+    }
+
+ 
+
+
+    .nav-logo {
+        width: 65px;
+        height: 65px;
+    }
+
+    .logo {
+        font-size: 24px;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    .nav-links {
+        position: fixed;
+        left: -100%;
+        top: 0;
+        flex-direction: column;
+        background: rgba(10, 10, 10, 0.98);
+        backdrop-filter: blur(10px);
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        transition: left 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        padding: 120px 0 40px;
+        gap: 5px;
+        border-right: 1px solid rgba(139, 92, 246, 0.1);
+        overflow-y: auto;
+    }
+
+    .nav-links.active {
+        left: 0;
+    }
+
+    .nav-links li {
+        padding: 0;
+        opacity: 0;
+        transform: translateY(20px);
+        transition: all 0.3s ease;
+    }
+
+    .nav-links.active li {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .nav-links.active li:nth-child(1) {
+        transition-delay: 0.1s;
+    }
+
+    .nav-links.active li:nth-child(2) {
+        transition-delay: 0.15s;
+    }
+
+    .nav-links.active li:nth-child(3) {
+        transition-delay: 0.2s;
+    }
+
+    .nav-links.active li:nth-child(4) {
+        transition-delay: 0.25s;
+    }
+
+    .nav-links.active li:nth-child(5) {
+        transition-delay: 0.3s;
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        display: block;
+        padding: 20px 40px;
+        color: #e5e5e5;
+        position: relative;
+        transition: color 0.3s;
+    }
+
+    .nav-links a:hover {
+        color: #8b5cf6;
+    }
+
+    .nav-links a::before {
+        content: '';
+        position: absolute;
+        bottom: 8px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 2px;
+        background: linear-gradient(135deg, #8b5cf6, #06b6d4);
+        transition: width 0.3s;
+    }
+
+    .nav-links a:hover::before {
+        width: 50%;
+    }
+
+    .nav-links a::after {
+        display: none;
+    }
+
+    .menu-toggle.active .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-6px, 7px);
+    }
+
+    .menu-toggle.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle.active .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-6px, -7px);
+    }
+}
+
+@media (max-width: 480px) {
+
+
+    .nav-logo {
+        width: 55px;
+        height: 55px;
+    }
+
+    .logo {
+        font-size: 20px;
+    }
+
+    .nav-links {
+        padding: 100px 0 40px;
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        padding: 18px 30px;
+    }
+}
+/* Mobile Responsive */
+@media (max-width: 768px) {
+    nav {
+        padding: 6px 0px;
+    }
+
+
+    .logo {
+        font-size: 24px;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    .nav-links {
+        position: fixed;
+        left: -100%;
+        top: 0;
+        flex-direction: column;
+        background: rgba(10, 10, 10, 0.98);
+        backdrop-filter: blur(10px);
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        transition: left 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        padding: 120px 0 40px;
+        gap: 5px;
+        border-right: 1px solid rgba(139, 92, 246, 0.1);
+        overflow-y: auto;
+    }
+
+    .nav-links.active {
+        left: 0;
+    }
+
+    .nav-links li {
+        padding: 0;
+        opacity: 0;
+        transform: translateY(20px);
+        transition: all 0.3s ease;
+    }
+
+    .nav-links.active li {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    .nav-links.active li:nth-child(1) {
+        transition-delay: 0.1s;
+    }
+
+    .nav-links.active li:nth-child(2) {
+        transition-delay: 0.15s;
+    }
+
+    .nav-links.active li:nth-child(3) {
+        transition-delay: 0.2s;
+    }
+
+    .nav-links.active li:nth-child(4) {
+        transition-delay: 0.25s;
+    }
+
+    .nav-links.active li:nth-child(5) {
+        transition-delay: 0.3s;
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        display: block;
+        padding: 20px 40px;
+        color: #e5e5e5;
+        position: relative;
+        transition: color 0.3s;
+    }
+
+    .nav-links a:hover {
+        color: #8b5cf6;
+    }
+
+    .nav-links a::before {
+        content: '';
+        position: absolute;
+        bottom: 8px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 2px;
+        background: linear-gradient(135deg, #8b5cf6, #06b6d4);
+        transition: width 0.3s;
+    }
+
+    .nav-links a:hover::before {
+        width: 50%;
+    }
+
+    .nav-links a::after {
+        display: none;
+    }
+
+    /* Hamburger Animation */
+    .menu-toggle.active .bar:nth-child(1) {
+        transform: rotate(-45deg) translate(-6px, 7px);
+    }
+
+    .menu-toggle.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle.active .bar:nth-child(3) {
+        transform: rotate(45deg) translate(-6px, -7px);
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        font-size: 20px;
+    }
+
+    .nav-links {
+        padding: 100px 0 40px;
+    }
+
+    .nav-links a {
+        font-size: 16px;
+        padding: 18px 30px;
+    }
+}
+
+
+
+
+
 
         /* Hero Section */
         .about-hero {
@@ -357,15 +693,23 @@
     </style>
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
+    <div class="nav-brand">
+        <img src="/pngtosvg(1)(1).png" alt="Night Codes Logo" class="nav-logo">
         <div class="logo">NIGHT CODES</div>
-        <ul class="nav-links">
-             <li><a href="/index.html">Home</a></li>
+    </div>
+    <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>
+     <ul class="nav-links">
+        <li><a href="/index.html">Home</a></li>
             <li><a href="/service.html">Services</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contectus.html">Contact</a></li>
         </ul>
-    </nav>
+</nav>
 
     <section class="about-hero">
         <div class="about-hero-content">
@@ -396,62 +740,106 @@
         </div>
     </section>
 
-    <section class="values">
-        <h2>Our Core Values</h2>
-        <div class="values-grid">
-            <div class="value-card">
-                <div class="value-icon">💡</div>
-                <h4>Innovation</h4>
-                <p>We constantly explore new technologies and approaches to deliver cutting-edge solutions.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🎯</div>
-                <h4>Excellence</h4>
-                <p>Quality is never an accident. We strive for perfection in every project we undertake.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🤝</div>
-                <h4>Partnership</h4>
-                <p>Your success is our success. We work alongside you as true partners in your journey.</p>
-            </div>
-            <div class="value-card">
-                <div class="value-icon">🔒</div>
-                <h4>Integrity</h4>
-                <p>We operate with transparency, honesty, and ethical practices in everything we do.</p>
-            </div>
-        </div>
-    </section>
+<section class="values">
+    <h2>Our Core Values</h2>
+    <div class="values-grid">
 
-    <section class="team">
-        <h2>Meet Our Team</h2>
-        <p class="team-intro">Behind every great project is a team of talented individuals who bring expertise, creativity, and passion to the table.</p>
-        <div class="team-grid">
-            <div class="team-member">
-                <div class="team-avatar">NC</div>
-                <h4>ASHFAQ</h4>
-                <div class="role">Chief Executive Officer</div>
-                <p>Visionary leader with 15+ years in tech innovation and business strategy.</p>
+        <!-- Innovation -->
+        <div class="value-card">
+            <div class="value-icon">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <circle cx="12" cy="12" r="5"/>
+                    <line x1="12" y1="1" x2="12" y2="4"/>
+                    <line x1="12" y1="20" x2="12" y2="23"/>
+                    <line x1="4.22" y1="4.22" x2="6.34" y2="6.34"/>
+                    <line x1="17.66" y1="17.66" x2="19.78" y2="19.78"/>
+                    <line x1="1" y1="12" x2="4" y2="12"/>
+                    <line x1="20" y1="12" x2="23" y2="12"/>
+                    <line x1="4.22" y1="19.78" x2="6.34" y2="17.66"/>
+                    <line x1="17.66" y1="6.34" x2="19.78" y2="4.22"/>
+                </svg>
             </div>
-            <div class="team-member">
-                <div class="team-avatar">NC</div>
-                <h4>ASHFAQ</h4>
-                <div class="role">Chief Technology Officer</div>
-                <p>Expert in cloud architecture and AI integration with a passion for scalable solutions.</p>
-            </div>
-            <div class="team-member">
-                <div class="team-avatar">NC</div>
-                <h4>ASHFAQ</h4>
-                <div class="role">Lead Developer</div>
-                <p>Full-stack wizard specializing in modern web technologies and mobile apps.</p>
-            </div>
-            <div class="team-member">
-                <div class="team-avatar">NC</div>
-                <h4>ASHFAQ</h4>
-                <div class="role">Creative Director</div>
-                <p>Design thinking expert who transforms complex ideas into beautiful experiences.</p>
-            </div>
+            <h4>Innovation</h4>
+            <p>We constantly explore new technologies and approaches to deliver cutting-edge solutions.</p>
         </div>
-    </section> 
+
+        <!-- Excellence -->
+        <div class="value-card">
+            <div class="value-icon">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polygon points="12 2 15 11 24 11 17 17 19 26 12 20 5 26 7 17 0 11 9 11 12 2"/>
+                </svg>
+            </div>
+            <h4>Excellence</h4>
+            <p>Quality is never an accident. We strive for perfection in every project we undertake.</p>
+        </div>
+
+        <!-- Partnership -->
+        <div class="value-card">
+            <div class="value-icon">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M16 21v-2a4 4 0 0 0-8 0v2"/>
+                    <circle cx="12" cy="7" r="4"/>
+                    <path d="M21 21v-2a4 4 0 0 0-3-3.87"/>
+                    <path d="M3 21v-2a4 4 0 0 1 3-3.87"/>
+                </svg>
+            </div>
+            <h4>Partnership</h4>
+            <p>Your success is our success. We work alongside you as true partners in your journey.</p>
+        </div>
+
+        <!-- Integrity -->
+        <div class="value-card">
+            <div class="value-icon">
+                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M12 1l3 5 5 .75-3.5 3.25L17 17l-5-2-5 2 1.5-6L4 6.75 9 6l3-5z"/>
+                </svg>
+            </div>
+            <h4>Integrity</h4>
+            <p>We operate with transparency, honesty, and ethical practices in everything we do.</p>
+        </div>
+
+    </div>
+</section>
+
+
+<section class="team">
+    <h2>Key Insights</h2>
+    <p class="team-intro">Some important points about our service and approach.</p>
+    <div class="team-grid">
+
+        <div class="team-member">
+            <div class="team-avatar">01</div>
+            <h4>Fast Setup</h4>
+            <div class="role">Quick Start</div>
+            <p>Get your project running quickly with minimal setup and maximum efficiency.</p>
+        </div>
+
+        <div class="team-member">
+            <div class="team-avatar">02</div>
+            <h4>Reliable</h4>
+            <div class="role">Stable System</div>
+            <p>We ensure your website or app runs smoothly without downtime or issues.</p>
+        </div>
+
+        <div class="team-member">
+            <div class="team-avatar">03</div>
+            <h4>Secure</h4>
+            <div class="role">Data Safe</div>
+            <p>Your data and users are protected with strong security measures.</p>
+        </div>
+
+        <div class="team-member">
+            <div class="team-avatar">04</div>
+            <h4>Affordable</h4>
+            <div class="role">Budget Friendly</div>
+            <p>High-quality solutions that don’t break the bank, perfect for small projects.</p>
+        </div>
+
+    </div>
+</section>
+
+
 
     <footer>
         <p>&copy; 2025 Night Codes. All rights reserved.</p>
