--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Night Codes - Innovating Tomorrow's Technology</title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="/mylogo.ico">
+<link rel="shortcut icon" href="/favicon.ico">
+
+
+
     <style>
         * {
             margin: 0;
