--- a/index.html
+++ b/index.html
@@ -847,10 +847,14 @@ body.menu-open {
         <span class="bar"></span>
     </div>
      <ul class="nav-links">
-        <li><a href="/index.html">Home</a></li>
+
+
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/service.html">Services</a></li>
             <li><a href="/about.html">About</a></li>
             <li><a href="/contectus.html">Contact</a></li>
+            <li><a href="/portfolio.html">portfolio</a></li>
+            
         </ul>
 </nav>
 <!-- <nav id="navbar">
